--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
 		"polyline",
 		"simplify"
 	],
+	"require": {
+		"php": ">=8.0.0"
+	},
 	"autoload": {
 		"psr-4": {
 			"bigDream\\simplify\\": "src"
